Update separator opacity on visibility change

Bug: 904318
Change-Id: I3c0367bc925a5f3b78f3a0457c25ef3b7c807b38
Reviewed-on: https://chromium-review.googlesource.com/c/1333007
Reviewed-by: Justin Donnelly <jdonnelly@chromium.org>
Commit-Queue: Jay Harris <harrisjay@chromium.org>
Cr-Commit-Position: refs/heads/master@{#607765}
Former-commit-id: e574e27caf09a7af60ffa25fd7af460ebc545736